--- a/09-UnitTest/09-UnitTesting.ipynb
+++ b/09-UnitTest/09-UnitTesting.ipynb
@@ -1,3 +1,22 @@
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "3f168073-83b5-445f-80e4-d0f1ff3d4cb9",
+   "metadata": {},
+   "source": [
+    // ... contenido omitido para brevedad ...
+   ]
+  }
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
 
 {
  "cells": [
