Changed the settings.json file and the 09-UnitTesting.ipynb file.

--- a/09-UnitTest/09-UnitTesting.ipynb
+++ b/09-UnitTest/09-UnitTesting.ipynb
@@ -26,6 +26,7 @@
     "## Catch2\n",
     "\n",
     "Our goal here is to learn to use\n",
+    "\n",
     "[catch2](https://github.com/catchorg/Catch2/blob/master/docs/tutorial.md#top)\n",
     "to test a very simple function extracted from their tutorial. Later we\n",
     "will modularize the code to practice that and write a useful `Makefile`.\n",
@@ -332,9 +333,19 @@
     "}\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ed9bb59",
+   "metadata": {},
+   "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
